[ADD|FORM] Add contact form component

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,4 +3,5 @@
 @import './components/_cta.scss';
 @import './components/_pill.scss';
 @import './components/_card.scss';
+@import './components/_input.scss';
 @source not "../../public/*";
